CHANGES IN FLTK 1.1.1

	- The Fl_BMP_Image class now handles 16-bit BMP files
	  and BMP files with a transparency mask.
	- The fltk-config script didn't add the required include
	  path, if any, when compiling a program.
	- Added a license clarification that the FLTK manual is
	  covered by the same license as FLTK itself.
	- Fl_Check_Browser wasn't documented.
	- Fl_Preferences::Node::addChild(), deleteEntry(), and
	  remove() didn't set the "dirty" flag.
	- The "no change" button didn't work in the FLUID widget
	  panel.
	- Vertical scrollbars did not draw the arrows inactive
	  when the scrollbar was inactive.


CHANGES IN FLTK 1.1.0

	- Documentation updates.
	- Added a Fl_Widget::redraw_label() method which flags a
	  redraw of the appropriate area.  This helps to
	  eliminate flicker when updating the value of a widget.
	- Fl_Wizard::value() now resets the mouse cursor to the
	  window's default cursor.
	- Fl_File_Chooser::type() didn't enable/disable the new
	  directory button correctly.
	- Fl_Preferences::entryExists() did not work properly.
	- FLUID's image file chooser pattern was incorrect.
	- Fl_File_Icon::load_system_icons() now detects KDE
	  icons in /opt/kde, /usr/local, and /usr automatically,
	  and supports the KDEDIR environment variable as well.
	- Submenus now display to the left of the parent menu if
	  they won't fit to the right.  Previously they would
	  display right on top of the parent menu...
	- Fl_Menu_:add() didn't handle a trailing "\" character
	  gracefully.
	- Clicking/dragging the middle mouse button in a
	  scrollbar now moves directly to that scroll position,
	  matching the behavior of other toolkits.
	- Added some more range checking to the Fl_Text_Display
	  widget.
	- The editor demo did not correctly update the style
	  (syntax highlighting) information.


CHANGES IN FLTK 1.1.0rc7

	- Updated the Fl_Text_Buffer and Fl_Text_Display classes
	  to be based on NEdit 5.3 (patch from George Garvey).